@@ -1,4 +1,4 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.idea;
 
 import com.intellij.accessibility.AccessibilityUtils;
@@ -9,6 +9,7 @@ import com.intellij.diagnostic.StartUpMeasurer;
 import com.intellij.ide.*;
 import com.intellij.ide.customize.CommonCustomizeIDEWizardDialog;
 import com.intellij.ide.gdpr.Agreements;
+import com.intellij.ide.gdpr.ConsentOptions;
 import com.intellij.ide.gdpr.EndUserAgreement;
 import com.intellij.ide.instrument.WriteIntentLockInstrumenter;
 import com.intellij.ide.plugins.PluginManagerCore;
@@ -26,7 +27,6 @@ import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.util.ShutDownTracker;
 import com.intellij.openapi.util.SystemInfoRt;
 import com.intellij.openapi.util.io.win32.IdeaWin32;
-import com.intellij.openapi.wm.WeakFocusStackManager;
 import com.intellij.openapi.wm.impl.X11UiUtil;
 import com.intellij.ui.AppUIUtil;
 import com.intellij.ui.CoreIconManager;
@@ -34,14 +34,11 @@ import com.intellij.ui.IconManager;
 import com.intellij.ui.mac.MacOSApplicationProvider;
 import com.intellij.ui.scale.JBUIScale;
 import com.intellij.util.EnvironmentUtil;
+import com.intellij.util.PlatformUtils;
 import com.intellij.util.lang.Java11Shim;
 import com.intellij.util.lang.ZipFilePool;
 import com.intellij.util.ui.StartupUiUtil;
 import com.intellij.util.ui.accessibility.ScreenReader;
-import org.apache.log4j.ConsoleAppender;
-import org.apache.log4j.Level;
-import org.apache.log4j.PatternLayout;
-import org.apache.log4j.helpers.LogLog;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -59,6 +56,7 @@ import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 import java.lang.management.ManagementFactory;
 import java.lang.reflect.Constructor;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.nio.channels.FileChannel;
 import java.nio.channels.FileLock;
@@ -74,17 +72,22 @@ import java.util.*;
 import java.util.concurrent.*;
 import java.util.function.BiFunction;
 import java.util.function.Function;
+import java.util.logging.ConsoleHandler;
+import java.util.logging.Level;
 
-@SuppressWarnings("LoggerInitializedWithForeignClass")
 @ApiStatus.Internal
+@SuppressWarnings("LoggerInitializedWithForeignClass")
 public final class StartupUtil {
   @SuppressWarnings("StaticNonFinalField")
   public static BiFunction<String, String[], Integer> LISTENER = (integer, s) -> Main.ACTIVATE_NOT_INITIALIZED;
 
+  @SuppressWarnings("StaticNonFinalField")
+  public static Activity startupStart;
+
   private static final String IDEA_CLASS_BEFORE_APPLICATION_PROPERTY = "idea.class.before.app";
   // see `ApplicationImpl#USE_SEPARATE_WRITE_THREAD`
   private static final String USE_SEPARATE_WRITE_THREAD_PROPERTY = "idea.use.separate.write.thread";
-  private static final String PROJECTOR_LAUNCHER_CLASS_NAME = "org.jetbrains.projector.server.ProjectorLauncher";
+  private static final String PROJECTOR_LAUNCHER_CLASS_NAME = "org.jetbrains.projector.server.ProjectorLauncher$Starter";
 
   private static final String MAGIC_MAC_PATH = "/AppTranslocation/";
 
@@ -94,25 +97,26 @@ public final class StartupUtil {
 
   private StartupUtil() { }
 
-  @SuppressWarnings("StaticNonFinalField")
-  public static Activity startupStart;
-
   /** Called via reflection from {@link Main#bootstrap}. */
   public static void start(@NotNull String mainClass,
+                           boolean isHeadless,
+                           boolean setFlagsAgain,
                            String @NotNull [] args,
                            @NotNull LinkedHashMap<String, Long> startupTimings) throws Exception {
     StartUpMeasurer.addTimings(startupTimings, "bootstrap");
     startupStart = StartUpMeasurer.startActivity("app initialization preparation");
 
-    Main.setFlags(args);
-
+    // required if the unified class loader is not used
+    if (setFlagsAgain) {
+      Main.setFlags(args);
+    }
     CommandLineArgs.parse(args);
 
     LoadingState.setStrictMode();
     LoadingState.errorHandler = (message, throwable) -> Logger.getInstance(LoadingState.class).error(message, throwable);
 
     Activity activity = StartUpMeasurer.startActivity("ForkJoin CommonPool configuration");
-    IdeaForkJoinWorkerThreadFactory.setupForkJoinCommonPool(Main.isHeadless(args));
+    IdeaForkJoinWorkerThreadFactory.setupForkJoinCommonPool(isHeadless);
 
     ForkJoinPool forkJoinPool = ForkJoinPool.commonPool();
 
@@ -122,7 +126,6 @@ public final class StartupUtil {
         Activity subActivity = StartUpMeasurer.startActivity("main class loading");
         Class<?> aClass = StartupUtil.class.getClassLoader().loadClass(mainClass);
         subActivity.end();
-
         return (AppStarter)MethodHandles.lookup().findConstructor(aClass, MethodType.methodType(void.class)).invoke();
       }
       catch (RuntimeException e) {
@@ -133,94 +136,104 @@ public final class StartupUtil {
       }
     }, forkJoinPool);
 
-    activity = activity.endAndStart("log4j configuration");
-    configureLog4j();
-
-    if (args.length > 0 && args[0].startsWith(Main.CWM_HOST_COMMAND_PREFIX)) {
-      activity = activity.endAndStart("Cwm Host init");
+    CompletableFuture<@Nullable("if accepted") Object> euaDocumentFuture = isHeadless ? null : scheduleEuaDocumentLoading();
+    if (args.length > 0 && (Main.CWM_HOST_COMMAND.equals(args[0]) || Main.CWM_HOST_NO_LOBBY_COMMAND.equals(args[0]))) {
+      activity = activity.endAndStart("cwm host init");
       try {
         Class<?> projectorMainClass = StartupUtil.class.getClassLoader().loadClass(PROJECTOR_LAUNCHER_CLASS_NAME);
-        MethodHandles.lookup().findStatic(projectorMainClass, "runProjectorServer", MethodType.methodType(boolean.class)).invoke();
-      } catch (RuntimeException e) {
+        MethodHandles.privateLookupIn(projectorMainClass, MethodHandles.lookup())
+          .findStatic(projectorMainClass, "runProjectorServer", MethodType.methodType(boolean.class)).invoke();
+      }
+      catch (RuntimeException e) {
         throw e;
-      } catch (Throwable e) {
-        throw new RuntimeException(e);
+      }
+      catch (Throwable t) {
+        throw new RuntimeException(t);
       }
     }
 
-    activity = activity.endAndStart("Check graphics environment");
-    if (!Main.isHeadless() && !checkGraphics()) {
+    activity = activity.endAndStart("graphics environment checking");
+    if (!isHeadless && !checkGraphics()) {
       System.exit(Main.NO_GRAPHICS);
     }
 
-    activity = activity.endAndStart("LaF init scheduling");
-    Thread busyThread = Thread.currentThread();
-    // EndUserAgreement.Document type is not specified to avoid class loading
-    CompletableFuture<?> initUiTask = scheduleInitUi(busyThread);
-    CompletableFuture<Boolean> agreementDialogWasShown;
-    if (Main.isHeadless()) {
-      agreementDialogWasShown = initUiTask.thenApply(__ -> true);
-    }
-    else {
-      CompletableFuture<@Nullable("if accepted") Object> euaDocumentFuture = scheduleEuaDocumentLoading();
-      agreementDialogWasShown = initUiTask.thenCompose(o -> {
-        return euaDocumentFuture.thenApplyAsync(euaDocument -> {
-          boolean result = showEuaAndScheduleSplashIfNeeded(args, euaDocument);
-          ForkJoinPool.commonPool().execute(() -> {
-            updateFrameClassAndWindowIcon();
-            loadSystemFontsAndDnDCursors();
-          });
-          return result;
-        }, it -> {
-          if (EventQueue.isDispatchThread()) {
-            it.run();
-          }
-          else {
-            EventQueue.invokeLater(it);
-          }
-        });
-      });
-    }
-    activity.end();
-
-    if (!checkJdkVersion()) {
-      System.exit(Main.JDK_CHECK_FAILED);
-    }
-
-    activity = StartUpMeasurer.startActivity("config path computing");
+    activity = activity.endAndStart("config path computing");
     Path configPath = canonicalPath(PathManager.getConfigPath());
     Path systemPath = canonicalPath(PathManager.getSystemPath());
-    activity = activity.endAndStart("config path existence check");
 
-    // this check must be performed before system directories are locked
-    boolean configImportNeeded = !Main.isHeadless() &&
-                                 (!Files.exists(configPath) ||
-                                  Files.exists(configPath.resolve(ConfigImportHelper.CUSTOM_MARKER_FILE_NAME)));
+    activity = activity.endAndStart("system dirs locking");
+    // This needs to happen before UI initialization - if we're not going to show UI (in case another IDE instance is already running),
+    // we shouldn't initialize AWT toolkit in order to avoid unnecessary focus stealing and space switching on macOS.
+    boolean configImportNeeded = lockSystemDirs(!isHeadless, configPath, systemPath, args);
+
+    activity = activity.endAndStart("LaF init scheduling");
+    Thread busyThread = Thread.currentThread();
+    // LookAndFeel type is not specified to avoid class loading
+    CompletableFuture<Object/*LookAndFeel*/> initUiFuture = scheduleInitUi(busyThread, isHeadless);
+
+    // A splash instance must not be created before base LaF is created.
+    // It is important on Linux, where GTK LaF must be initialized (to properly setup scale factor).
+    // https://youtrack.jetbrains.com/issue/IDEA-286544
+    CompletableFuture<Runnable> splashTaskFuture = isHeadless || Main.isLightEdit() ? null : initUiFuture.thenApplyAsync(__ -> {
+      return prepareSplash(args);
+    }, forkJoinPool);
+
+    activity = activity.endAndStart("java.util.logging configuration");
+    configureJavaUtilLogging();
+    activity = activity.endAndStart("eua and splash scheduling");
+
+    CompletableFuture<Boolean> showEuaIfNeededFuture;
+    if (isHeadless) {
+      showEuaIfNeededFuture = initUiFuture.thenApply(__ -> true);
+    }
+    else {
+      showEuaIfNeededFuture = initUiFuture.thenCompose(baseLaF -> {
+        return euaDocumentFuture.thenComposeAsync(euaDocument -> showEuaIfNeeded(euaDocument, baseLaF), forkJoinPool);
+      });
+
+      if (splashTaskFuture != null) {
+        // please do not use a method-reference here
+        showEuaIfNeededFuture.thenAcceptBothAsync(splashTaskFuture, (__, runnable) -> {
+          runnable.run();
+        }, it -> EventQueue.invokeLater(it));
+      }
+    }
 
     activity = activity.endAndStart("system dirs checking");
-    // note: uses config directory
     if (!checkSystemDirs(configPath, systemPath)) {
       System.exit(Main.DIR_CHECK_FAILED);
     }
 
-    activity = activity.endAndStart("system dirs locking");
-    lockSystemDirs(configPath, systemPath, args);
     activity = activity.endAndStart("file logger configuration");
     // log initialization should happen only after locking the system directory
     Logger log = setupLogger();
     activity.end();
 
-    // plugins cannot be loaded when config import is needed, because plugins may be added after importing
+    // plugins cannot be loaded when a config import is needed, because plugins may be added after importing
+    Java11Shim.INSTANCE = new Java11ShimImpl();
     if (!configImportNeeded) {
       ZipFilePool.POOL = new ZipFilePoolImpl();
       PluginManagerCore.scheduleDescriptorLoading();
     }
-    Java11Shim.INSTANCE = new Java11ShimImpl();
+
+    if (!checkJdkVersion()) {
+      System.exit(Main.JDK_CHECK_FAILED);
+    }
 
     forkJoinPool.execute(() -> {
       setupSystemLibraries();
-      logEssentialInfoAboutIde(log, ApplicationInfoImpl.getShadowInstance());
       loadSystemLibraries(log);
+
+      // JNA and Swing are used; invoke only after both are loaded
+      if (!isHeadless && SystemInfoRt.isMac) {
+        initUiFuture.thenRunAsync(() -> {
+          Activity subActivity = StartUpMeasurer.startActivity("mac app init");
+          MacOSApplicationProvider.initApplication(log);
+          subActivity.end();
+        }, forkJoinPool);
+      }
+
+      logEssentialInfoAboutIde(log, ApplicationInfoImpl.getShadowInstance(), args);
     });
 
     // don't load EnvironmentUtil class in the main thread
@@ -234,54 +247,20 @@ public final class StartupUtil {
       runPreAppClass(log, args);
     }
 
-    // may be called from EDT, but other events in the queue should be processed before `patchSystem`
-    CompletableFuture<@Nullable Void> prepareUiFuture = agreementDialogWasShown
-      .thenRunAsync(() -> {
-        patchSystem(log);
-
-        if (!Main.isHeadless()) {
-          // not important
-          EventQueue.invokeLater(() -> {
-            // may be expensive (~200 ms), so configure only after showing the splash and as invokeLater
-            // (to allow other queued events to be executed)
-            StartupUiUtil.configureHtmlKitStylesheet();
-            //noinspection ResultOfMethodCallIgnored
-            WeakFocusStackManager.getInstance();
-          });
-
-          if (SystemInfoRt.isMac) {
-            ForkJoinPool.commonPool().execute(() -> {
-              Activity subActivity = StartUpMeasurer.startActivity("mac app init");
-              MacOSApplicationProvider.initApplication();
-              subActivity.end();
-            });
-          }
-        }
-      }, it -> EventQueue.invokeLater(it) /* don't use method reference */ )
-      .exceptionally(e -> {
-        StartupAbortedException.logAndExit(new StartupAbortedException("UI initialization failed", e), log);
-        return null;
-      });
-
     Activity mainClassLoadingWaitingActivity = StartUpMeasurer.startActivity("main class loading waiting");
     CompletableFuture<?> future = appStarterFuture
       .thenCompose(appStarter -> {
         mainClassLoadingWaitingActivity.end();
 
-        if (!Main.isHeadless() && configImportNeeded) {
-          prepareUiFuture.join();
-          try {
-            importConfig(Arrays.asList(args), log, appStarter, agreementDialogWasShown);
-          }
-          catch (Exception e) {
-            throw new CompletionException(e);
-          }
+        List<String> argsAsList = List.of(args);
+        if (!isHeadless && configImportNeeded) {
+          showEuaIfNeededFuture.join();
+          importConfig(argsAsList, log, appStarter, showEuaIfNeededFuture, initUiFuture);
         }
-        return appStarter.start(Arrays.asList(args), prepareUiFuture);
+        return appStarter.start(argsAsList, showEuaIfNeededFuture.thenApply(__ -> initUiFuture.join()));
       })
       .exceptionally(e -> {
-        Throwable unwrappedError = e instanceof CompletionException && e.getCause() != null ? e.getCause() : e;
-        StartupAbortedException.logAndExit(new StartupAbortedException("Cannot start app", unwrappedError), log);
+        StartupAbortedException.logAndExit(new StartupAbortedException("Cannot start app", unwrapError(e)), log);
         return null;
       });
 
@@ -291,7 +270,47 @@ public final class StartupUtil {
       forkJoinPool.awaitQuiescence(Long.MAX_VALUE, TimeUnit.NANOSECONDS);
     }
     while (!future.isDone());
+    log.info("notify that start-up thread is free");
     AWTAutoShutdown.getInstance().notifyThreadFree(busyThread);
+  }
+
+  // executed not in EDT
+  private static @Nullable Runnable prepareSplash(String @NotNull [] args) {
+    int showSplash = -1;
+    for (String arg : args) {
+      if (CommandLineArgs.SPLASH.equals(arg)) {
+        showSplash = 1;
+        break;
+      }
+      else if (CommandLineArgs.NO_SPLASH.equals(arg)) {
+        showSplash = 0;
+        break;
+      }
+    }
+
+    if (showSplash == -1) {
+      // products may specify `splash` VM property; `nosplash` is deprecated and should be checked first
+      if (Boolean.getBoolean(CommandLineArgs.NO_SPLASH)) {
+        showSplash = 0;
+      }
+      else if (Boolean.getBoolean(CommandLineArgs.SPLASH)) {
+        showSplash = 1;
+      }
+    }
+
+    if (showSplash == 1) {
+      Activity prepareSplashActivity = StartUpMeasurer.startActivity("splash preparation");
+      Runnable runnable = SplashManager.scheduleShow(prepareSplashActivity);
+      prepareSplashActivity.end();
+      return runnable;
+    }
+    else {
+      return null;
+    }
+  }
+
+  private static Throwable unwrapError(Throwable e) {
+    return e instanceof CompletionException && e.getCause() != null ? e.getCause() : e;
   }
 
   private static boolean checkGraphics() {
@@ -316,14 +335,15 @@ public final class StartupUtil {
 
   // called by the app after startup
   public static synchronized void addExternalInstanceListener(@NotNull Function<List<String>, Future<CliResult>> processor) {
-    if (socketLock == null) throw new AssertionError("Not initialized yet");
+    if (socketLock == null) {
+      throw new AssertionError("Not initialized yet");
+    }
     socketLock.setCommandProcessor(processor);
   }
 
   // used externally by TeamCity plugin (as TeamCity cannot use modern API to support old IDE versions)
   @SuppressWarnings("MissingDeprecatedAnnotation")
-  @Deprecated
-  @ApiStatus.ScheduledForRemoval(inVersion = "2021.3")
+  @Deprecated(forRemoval = true)
   public static synchronized @Nullable BuiltInServer getServer() {
     return socketLock == null ? null : socketLock.getServer();
   }
@@ -359,7 +379,7 @@ public final class StartupUtil {
 
   public interface AppStarter {
     /* called from IDE init thread */
-    @NotNull CompletableFuture<?> start(@NotNull List<String> args, @NotNull CompletableFuture<?> prepareUiFuture);
+    @NotNull CompletableFuture<?> start(@NotNull List<String> args, @NotNull CompletableFuture<Object> prepareUiFuture);
 
     /* called from IDE init thread */
     default void beforeImportConfigs() {}
@@ -385,7 +405,11 @@ public final class StartupUtil {
     }
   }
 
-  private static void importConfig(List<String> args, Logger log, AppStarter appStarter, CompletableFuture<Boolean> agreementDialogWasShown) throws Exception {
+  private static void importConfig(List<String> args,
+                                   Logger log,
+                                   AppStarter appStarter,
+                                   CompletableFuture<Boolean> agreementShown,
+                                   CompletableFuture<Object> initUiFuture) {
     Activity activity = StartUpMeasurer.startActivity("screen reader checking");
     try {
       EventQueue.invokeAndWait(AccessibilityUtils::enableScreenReaderSupportIfNecessary);
@@ -396,43 +420,61 @@ public final class StartupUtil {
     activity = activity.endAndStart("config importing");
     appStarter.beforeImportConfigs();
     Path newConfigDir = PathManager.getConfigDir();
-    EventQueue.invokeAndWait(() -> ConfigImportHelper.importConfigsTo(agreementDialogWasShown.join(), newConfigDir, args, log));
+    try {
+      EventQueue.invokeAndWait(() -> {
+        setLafToShowPreAppStartUpDialogIfNeeded(initUiFuture.join());
+        ConfigImportHelper.importConfigsTo(agreementShown.join(), newConfigDir, args, log);
+      });
+    }
+    catch (InvocationTargetException e) {
+      throw new CompletionException(e.getCause());
+    }
+    catch (InterruptedException e) {
+      throw new CompletionException(e);
+    }
     appStarter.importFinished(newConfigDir);
 
-    if (!ConfigImportHelper.isConfigImported()) {
-      // an exception handler is already set and event queue and icons are initialized by `ConfigImportHelper`
-      EventQueue.invokeAndWait(() -> runStartupWizard(appStarter));
-    }
     activity.end();
-    PluginManagerCore.scheduleDescriptorLoading();
+
+    if (!PlatformUtils.isRider() || ConfigImportHelper.isConfigImported()) {
+      PluginManagerCore.scheduleDescriptorLoading();
+    }
   }
 
-  private static CompletableFuture<?> scheduleInitUi(Thread busyThread) {
+  public static void setLafToShowPreAppStartUpDialogIfNeeded(@NotNull Object baseLaF) {
+    if (DarculaLaf.setPreInitializedBaseLaf((LookAndFeel)baseLaF)) {
+      try {
+        UIManager.setLookAndFeel(new IntelliJLaf());
+      }
+      catch (UnsupportedLookAndFeelException e) {
+        throw new RuntimeException(e);
+      }
+    }
+  }
+
+  private static CompletableFuture<Object> scheduleInitUi(Thread busyThread, boolean isHeadless) {
     // calls `sun.util.logging.PlatformLogger#getLogger` - it takes enormous time (up to 500 ms)
     // only non-logging tasks can be executed before `setupLogger`
     Activity activityQueue = StartUpMeasurer.startActivity("LaF initialization (schedule)");
-    CompletableFuture<Void> initUiFuture = CompletableFuture.runAsync(() -> {
+    CompletableFuture<Object> initUiFuture = CompletableFuture.runAsync(() -> {
         checkHiDPISettings();
         blockATKWrapper();
 
         //noinspection SpellCheckingInspection
         System.setProperty("sun.awt.noerasebackground", "true");
-        if (System.getProperty("com.jetbrains.suppressWindowRaise") == null) {
-          System.setProperty("com.jetbrains.suppressWindowRaise", "true");
-        }
 
-        Activity activity = StartUpMeasurer.startActivity("awt toolkit creating");
+        Activity activity = activityQueue.startChild("awt toolkit creating");
         Toolkit.getDefaultToolkit();
         activity.end();
 
         activityQueue.updateThreadName();
       }, ForkJoinPool.commonPool())
-      .thenRunAsync(() -> {
+      .thenApplyAsync(__ -> {
         activityQueue.end();
 
         Activity activity = null;
         // we don't need Idea LaF to show splash, but we do need some base LaF to compute system font data (see below for what)
-        if (!Main.isHeadless()) {
+        if (!isHeadless) {
           // IdeaLaF uses AllIcons - icon manager must be activated
           activity = StartUpMeasurer.startActivity("icon manager activation");
           try {
@@ -462,33 +504,25 @@ public final class StartupUtil {
         // LaF is useless until initialized (`getDefaults` "should only be invoked ... after `initialize` has been invoked.")
         baseLaF.initialize();
 
-        // to compute system scale factor on non-macOS (JRE HiDpi is not enabled) we need to know system font data,
-        // and to compute system font data we need to know `Label.font` ui default (that's why we compute base LaF first)
+        // to compute the system scale factor on non-macOS (JRE HiDPI is not enabled), we need to know system font data,
+        // and to compute system font data we need to know `Label.font` UI default (that's why we compute base LaF first)
         activity = activity.endAndStart("system font data initialization");
-        JBUIScale.getSystemFontData(() -> {
-          Activity subActivity = StartUpMeasurer.startActivity("base LaF defaults getting");
-          UIDefaults result = baseLaF.getDefaults();
-          subActivity.end();
-          return result;
-        });
 
-        activity = activity.endAndStart("scale initialization");
-        JBUIScale.scale(1f);
+        if (!isHeadless) {
+          JBUIScale.getSystemFontData(() -> {
+            Activity subActivity = StartUpMeasurer.startActivity("base LaF defaults getting");
+            UIDefaults result = baseLaF.getDefaults();
+            subActivity.end();
+            return result;
+          });
 
-        activity = activity.endAndStart("LaF initialization");
-        try {
-          // required even in a headless mode, because some tests create configurables and our LaF is expected
-          UIManager.setLookAndFeel(new IntelliJLaf(baseLaF));
-        }
-        catch (UnsupportedLookAndFeelException e) {
-          throw new CompletionException(e);
+          activity = activity.endAndStart("scale initialization");
+          JBUIScale.scale(1f);
         }
 
-        StartUpMeasurer.setCurrentState(LoadingState.LAF_INITIALIZED);
+        StartUpMeasurer.setCurrentState(LoadingState.BASE_LAF_INITIALIZED);
 
         activity = activity.endAndStart("awt thread busy notification");
-        activity.end();
-
         /*
           Make EDT to always persist while the main thread is alive. Otherwise, it's possible to have EDT being
           terminated by {@link AWTAutoShutdown}, which will break a `ReadMostlyRWLock` instance.
@@ -496,7 +530,19 @@ public final class StartupUtil {
           and thus will effectively disable auto shutdown behavior for this application.
          */
         AWTAutoShutdown.getInstance().notifyThreadBusy(busyThread);
-      }, it -> EventQueue.invokeLater(it)/* don't use here method reference (EventQueue class must be loaded on demand) */);
+        activity.end();
+
+        patchSystem(isHeadless);
+
+        if (!isHeadless) {
+          ForkJoinPool.commonPool().execute(() -> {
+            // as one FJ task - execute one by one to make room for more important tasks
+            updateFrameClassAndWindowIcon();
+            loadSystemFontsAndDnDCursors();
+          });
+        }
+        return baseLaF;
+      }, it -> EventQueue.invokeLater(it) /* do not use a method-reference here (`EventQueue` class must be loaded on demand) */);
 
     if (isUsingSeparateWriteThread()) {
       return CompletableFuture.allOf(initUiFuture, CompletableFuture.runAsync(() -> {
@@ -507,7 +553,7 @@ public final class StartupUtil {
         finally {
           activity.end();
         }
-      }, ForkJoinPool.commonPool()));
+      }, ForkJoinPool.commonPool())).thenApply(__ -> initUiFuture.join());
     }
     else {
       return initUiFuture;
@@ -515,11 +561,10 @@ public final class StartupUtil {
   }
 
   /*
-   * The method should be called before java.awt.Toolkit.initAssistiveTechnologies()
-   * which is called from Toolkit.getDefaultToolkit().
+   * The method should be called before `Toolkit#initAssistiveTechnologies`, which is called from `Toolkit#getDefaultToolkit`.
    */
   private static void blockATKWrapper() {
-    // registry must not be used here, because this method is called before application loading
+    // the registry must not be used here, because this method is called before application loading
     //noinspection SpellCheckingInspection
     if (!SystemInfoRt.isLinux || !Boolean.parseBoolean(System.getProperty("linux.jdk.accessibility.atkwrapper.block", "true"))) {
       return;
@@ -527,7 +572,7 @@ public final class StartupUtil {
 
     Activity activity = StartUpMeasurer.startActivity("atk wrapper blocking");
     if (ScreenReader.isEnabled(ScreenReader.ATK_WRAPPER)) {
-      // Replace AtkWrapper with a dummy Object. It'll be instantiated & garbage collected right away, a NOP.
+      // Replacing `AtkWrapper` with a dummy `Object`. It'll be instantiated & garbage collected right away, a NOP.
       System.setProperty("javax.accessibility.assistive_technologies", "java.lang.Object");
       Logger.getInstance(StartupUiUtil.class).info(ScreenReader.ATK_WRAPPER + " is blocked, see IDEA-149219");
     }
@@ -536,86 +581,65 @@ public final class StartupUtil {
 
   private static void loadSystemFontsAndDnDCursors() {
     Activity activity = StartUpMeasurer.startActivity("system fonts loading");
-    // forces loading of all system fonts, the following statement itself might not do it (see JBR-1825)
+    // this forces loading of all system fonts; the following statement alone might not do it (see JBR-1825)
     new Font("N0nEx1st5ntF0nt", Font.PLAIN, 1).getFamily();
-    // caches available font family names (for the default locale), to speed up editor reopening (`ComplementaryFontsRegistry` initialization)
+    // this caches available font family names for the default locale to speed up editor reopening (see `ComplementaryFontsRegistry`)
     GraphicsEnvironment.getLocalGraphicsEnvironment().getAvailableFontFamilyNames();
 
-    // pre-load cursors used by drag-n-drop AWT subsystem
+    // preload cursors used by drag-n-drop AWT subsystem
     activity = activity.endAndStart("DnD setup");
     DragSource.getDefaultDragSource();
     activity.end();
   }
 
-  @SuppressWarnings("SpellCheckingInspection")
-  private static boolean showEuaAndScheduleSplashIfNeeded(String[] args, @Nullable Object euaDocument) {
+  // executed not in EDT
+  private static CompletableFuture<Boolean> showEuaIfNeeded(@Nullable Object euaDocument, @NotNull Object baseLaF) {
     Activity activity = StartUpMeasurer.startActivity("eua showing");
     EndUserAgreement.Document document = (EndUserAgreement.Document)euaDocument;
 
+    CompletableFuture<Boolean> euaFuture;
     EndUserAgreement.updateCachedContentToLatestBundledVersion();
     if (document != null) {
-      Agreements.showEndUserAndDataSharingAgreements(document);
+      euaFuture = CompletableFuture.supplyAsync(() -> {
+        setLafToShowPreAppStartUpDialogIfNeeded(baseLaF);
+        Agreements.showEndUserAndDataSharingAgreements(document);
+        return true;
+      }, EventQueue::invokeLater);
     }
-    else if (AppUIUtil.needToShowUsageStatsConsent()){
-      Agreements.showDataSharingAgreement();
+    else if (ConsentOptions.needToShowUsageStatsConsent()) {
+      euaFuture = CompletableFuture.supplyAsync(() -> {
+        setLafToShowPreAppStartUpDialogIfNeeded(baseLaF);
+        Agreements.showDataSharingAgreement();
+        return false;
+      }, EventQueue::invokeLater);
     }
-    activity.end();
-
-    if (!Main.isLightEdit()) {
-      int showSplash = -1;
-      for (String arg : args) {
-        if (CommandLineArgs.SPLASH.equals(arg)) {
-          showSplash = 1;
-          break;
-        }
-        else if (CommandLineArgs.NO_SPLASH.equals(arg)) {
-          showSplash = 0;
-          break;
-        }
-      }
-
-      if (showSplash == -1) {
-        // products may specify `splash` VM property; `nosplash` is deprecated and should be checked first
-        if (Boolean.getBoolean(CommandLineArgs.NO_SPLASH)) {
-          showSplash = 0;
-        }
-        else if (Boolean.getBoolean(CommandLineArgs.SPLASH)) {
-          showSplash = 1;
-        }
-      }
-
-      if (showSplash == 1) {
-        Activity prepareSplashActivity = StartUpMeasurer.startActivity("splash preparation");
-        SplashManager.scheduleShow();
-        prepareSplashActivity.end();
-      }
+    else {
+      euaFuture = CompletableFuture.completedFuture(false);
     }
-
-    // agreementDialogWasShown
-    return document != null;
+    return euaFuture.whenComplete((__, ___) -> activity.end());
   }
 
   private static void updateFrameClassAndWindowIcon() {
     Activity activity = StartUpMeasurer.startActivity("frame class updating");
-    AppUIUtil.updateFrameClass(Toolkit.getDefaultToolkit());
+    AppUIUtil.updateFrameClass();
 
     activity = activity.endAndStart("update window icon");
     // `updateWindowIcon` should be called after `UIUtil#initSystemFontData`, because it uses computed system font data for scale context
-    if (!PluginManagerCore.isRunningFromSources() && !AppUIUtil.isWindowIconAlreadyExternallySet()) {
+    if (!AppUIUtil.isWindowIconAlreadyExternallySet() && !PluginManagerCore.isRunningFromSources()) {
       // most of the time is consumed by loading SVG and can be done in parallel
       AppUIUtil.updateWindowIcon(JOptionPane.getRootFrame());
     }
     activity.end();
   }
 
-  private static void configureLog4j() {
+  private static void configureJavaUtilLogging() {
     Activity activity = StartUpMeasurer.startActivity("console logger configuration");
-    System.setProperty("log4j.defaultInitOverride", "true");  // suppresses Log4j "no appenders" warning
-    @SuppressWarnings("deprecation")
-    org.apache.log4j.Logger root = org.apache.log4j.Logger.getRootLogger();
-    if (!root.getAllAppenders().hasMoreElements()) {
-      root.setLevel(Level.WARN);
-      root.addAppender(new ConsoleAppender(new PatternLayout(PatternLayout.DEFAULT_CONVERSION_PATTERN)));
+    java.util.logging.Logger rootLogger = java.util.logging.Logger.getLogger("");
+    if (rootLogger.getHandlers().length == 0) {
+      rootLogger.setLevel(Level.WARNING);
+      ConsoleHandler consoleHandler = new ConsoleHandler();
+      consoleHandler.setLevel(Level.WARNING);
+      rootLogger.addHandler(consoleHandler);
     }
     activity.end();
   }
@@ -740,10 +764,16 @@ public final class StartupUtil {
     }
   }
 
-  private static void lockSystemDirs(Path configPath, Path systemPath, String[] args) throws Exception {
+  /** Returns {@code true} when {@code checkConfig} is requested and config import is needed. */
+  private static boolean lockSystemDirs(boolean checkConfig, Path configPath, Path systemPath, String[] args) throws Exception {
     if (socketLock != null) {
       throw new AssertionError("Already initialized");
     }
+
+    // this check must be performed before system directories are locked
+    boolean importNeeded =
+      checkConfig && (!Files.exists(configPath) || Files.exists(configPath.resolve(ConfigImportHelper.CUSTOM_MARKER_FILE_NAME)));
+
     socketLock = new SocketLock(configPath, systemPath);
 
     Map.Entry<SocketLock.ActivationStatus, CliResult> status = socketLock.lockAndTryActivate(args);
@@ -774,6 +804,8 @@ public final class StartupUtil {
         System.exit(Main.INSTANCE_CHECK_FAILED);
       }
     }
+
+    return importNeeded;
   }
 
   @SuppressWarnings("UseOfSystemOutOrSystemErr")
@@ -785,7 +817,7 @@ public final class StartupUtil {
       //noinspection CallToPrintStackTrace
       e.printStackTrace();
     }
-    Logger log = Logger.getInstance(Main.class);
+    Logger log = Logger.getInstance(StartupUtil.class);
     log.info("------------------------------------------------------ IDE STARTED ------------------------------------------------------");
     ShutDownTracker.getInstance().registerShutdownTask(() -> {
       log.info("------------------------------------------------------ IDE SHUTDOWN ------------------------------------------------------");
@@ -793,10 +825,6 @@ public final class StartupUtil {
     if (Boolean.parseBoolean(System.getProperty("intellij.log.stdout", "true"))) {
       System.setOut(new PrintStreamLogger("STDOUT", System.out));
       System.setErr(new PrintStreamLogger("STDERR", System.err));
-      // Disabling output to `System.err` seems to be the only way to avoid deadlock (https://youtrack.jetbrains.com/issue/IDEA-243708)
-      // with Log4j 1.x if an internal error happens during logging (e.g. a disk space issue).
-      // Should be revisited in case of migration to Log4j 2.
-      LogLog.setQuietMode(true);
     }
     return log;
   }
@@ -837,7 +865,7 @@ public final class StartupUtil {
     activity.end();
   }
 
-  private static void logEssentialInfoAboutIde(Logger log, ApplicationInfo appInfo) {
+  private static void logEssentialInfoAboutIde(Logger log, ApplicationInfo appInfo, String[] args) {
     Activity activity = StartUpMeasurer.startActivity("essential IDE info logging");
 
     ApplicationNamesInfo namesInfo = ApplicationNamesInfo.getInstance();
@@ -847,20 +875,17 @@ public final class StartupUtil {
     log.info("JRE: " + System.getProperty("java.runtime.version", "-") + " (" + System.getProperty("java.vendor", "-") + ")");
     log.info("JVM: " + System.getProperty("java.vm.version", "-") + " (" + System.getProperty("java.vm.name", "-") + ")");
 
-    List<String> arguments = ManagementFactory.getRuntimeMXBean().getInputArguments();
-    if (arguments != null) {
-      log.info("JVM Args: " + String.join(" ", arguments));
+    if (SystemInfoRt.isXWindow) {
+      String wmName = X11UiUtil.getWmName();
+      log.info("WM detected: " + wmName + ", desktop: " + Objects.requireNonNullElse(System.getenv("XDG_CURRENT_DESKTOP"), "-"));
     }
 
-    String extDirs = System.getProperty("java.ext.dirs");
-    if (extDirs != null) {
-      for (String dir : extDirs.split(File.pathSeparator)) {
-        String[] content = new File(dir).list();
-        if (content != null && content.length > 0) {
-          log.info("ext: " + dir + ": " + Arrays.toString(content));
-        }
-      }
+    List<String> jvmOptions = ManagementFactory.getRuntimeMXBean().getInputArguments();
+    if (jvmOptions != null) {
+      log.info("JVM options: " + jvmOptions);
     }
+
+    log.info("args: " + Arrays.toString(args));
 
     log.info("library path: " + System.getProperty("java.library.path"));
     log.info("boot library path: " + System.getProperty("sun.boot.library.path"));
@@ -876,12 +901,11 @@ public final class StartupUtil {
       "\n  " + PathManager.PROPERTY_CONFIG_PATH + '=' + logPath(PathManager.getConfigPath()) +
       "\n  " + PathManager.PROPERTY_SYSTEM_PATH + '=' + logPath(PathManager.getSystemPath()) +
       "\n  " + PathManager.PROPERTY_PLUGINS_PATH + '=' + logPath(PathManager.getPluginsPath()) +
-      "\n  " + PathManager.PROPERTY_LOG_PATH + '=' + logPath(PathManager.getLogPath())
-    );
+      "\n  " + PathManager.PROPERTY_LOG_PATH + '=' + logPath(PathManager.getLogPath()));
 
-    log.info("CPU cores: " + Runtime.getRuntime().availableProcessors() +
-             "; ForkJoinPool.commonPool: " + ForkJoinPool.commonPool() +
-             "; factory: " + ForkJoinPool.commonPool().getFactory());
+    int cores = Runtime.getRuntime().availableProcessors();
+    ForkJoinPool pool = ForkJoinPool.commonPool();
+    log.info("CPU cores: " + cores + "; ForkJoinPool.commonPool: " + pool + "; factory: " + pool.getFactory());
 
     activity.end();
   }
@@ -900,14 +924,14 @@ public final class StartupUtil {
     return path;
   }
 
-  private static void runStartupWizard(AppStarter appStarter) {
+  public static void runStartupWizard() {
     String stepsDialogName = ApplicationInfoImpl.getShadowInstance().getWelcomeWizardDialog();
     if (stepsDialogName == null) return;
 
     try {
       Class<?> dialogClass = Class.forName(stepsDialogName);
       Constructor<?> ctor = dialogClass.getConstructor(AppStarter.class);
-      ((CommonCustomizeIDEWizardDialog)ctor.newInstance(appStarter)).showIfNeeded();
+      ((CommonCustomizeIDEWizardDialog)ctor.newInstance((AppStarter)null)).showIfNeeded();
     }
     catch (Throwable e) {
       Main.showMessage(BootstrapBundle.message("bootstrap.error.title.configuration.wizard.failed"), e);
@@ -915,22 +939,17 @@ public final class StartupUtil {
     }
 
     PluginManagerCore.invalidatePlugins();
+    PluginManagerCore.scheduleDescriptorLoading();
   }
 
   // must be called from EDT
-  private static void patchSystem(Logger log) {
-    assert EventQueue.isDispatchThread() : Thread.currentThread();
-
+  private static void patchSystem(boolean isHeadless) {
     Activity activity = StartUpMeasurer.startActivity("event queue replacing");
     // replace system event queue
-    IdeEventQueue eventQueue = IdeEventQueue.getInstance();
+    //noinspection ResultOfMethodCallIgnored
+    IdeEventQueue.getInstance();
 
-    LookAndFeel lookAndFeel = UIManager.getLookAndFeel();
-    if (lookAndFeel instanceof DarculaLaf) {
-      ((DarculaLaf)lookAndFeel).ideEventQueueInitialized(eventQueue);
-    }
-
-    if (!Main.isHeadless()) {
+    if (!isHeadless) {
       if ("true".equals(System.getProperty("idea.check.swing.threading"))) {
         activity = activity.endAndStart("repaint manager set");
         RepaintManager.setCurrentManager(new AssertiveRepaintManager());
@@ -939,7 +958,6 @@ public final class StartupUtil {
       if (SystemInfoRt.isXWindow) {
         activity = activity.endAndStart("linux wm set");
         String wmName = X11UiUtil.getWmName();
-        log.info("WM detected: " + wmName);
         if (wmName != null) {
           X11UiUtil.patchDetectedWm(wmName);
         }
